--- a/src/Components/Category/styles.css
+++ b/src/Components/Category/styles.css
@@ -1,3 +1,4 @@
+
 #root {
     height: 100%;
   }
@@ -8,7 +9,7 @@
   }
   
   body {
-    background: #eee;
+    background: hsl(0, 0%, 100%);
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #000;
@@ -39,11 +40,11 @@
     object-fit: cover;
   }
   
-  .swiper {
+  /* .swiper {
     width: 100%;
     height: 300px;
     margin: 20px auto;
-  }
+  } */
   .append-buttons {
     text-align: center;
     margin-top: 20px;
