--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+.react-multiple-carousel__arrow {
+position: absolute;
+    outline: 0;
+    transition: all .5s;
+    border-radius: 35px;
+    z-index: 1000;
+    border: 0;
+    background: gray;
+    min-width: 43px;
+    min-height: 43px;
+    opacity: 1;
+    cursor: pointer;
+    overflow: visible;
+}
