--- a/src/Components/Aanbieding/Aanbiending.css
+++ b/src/Components/Aanbieding/Aanbiending.css
@@ -1,78 +1,33 @@
-.active {
-    font-size: 8px;
-    color: #000000 !important;
-    font-weight: 600;
+.carousel-item-padding-40-px {
+  padding: 0 20px;
+  /* Adjust this value to control the gap */
+}
+
+
+.navAfter:hover {
+  color: #000000;
+}
+
+
+@keyframes jump {
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
   }
-  
-  .navAfter.active::before {
-    content: "";
-    width: 100%;
-    height: 0.5px;
-    background-color: #000000;
-    position: absolute;
-    left: 0;
-    top: 2px;
-    font-size: 8px;
-    transition: all linear 0.3s;
+
+  40% {
+    transform: translateY(-20px);
   }
-  
-  .navAfter {
-    min-height: 100%;
+
+  60% {
+    transform: translateY(-10px);
   }
-  
-  .navAfter::after {
-    content: "";
-    width: 0%;
-    height: 0.5px;
-    background-color: #000000;
-    position: absolute;
-    left: 0;
-    top: 2px;
-    font-size: 8px;
-    transition: all linear 0.3s;
-  }
-  
-  .navAfter:hover:after {
-    width: 100%;
-  }
-  
-  .active:hover:after {
-    width: 0%;
-  }
-  
-  /* .navAfter{
-    transition: all linear 0.3s;
-    -webkit-transition: all linear 0.3s;
-    -moz-transition: all linear 0.3s;
-    -ms-transition: all linear 0.3s;
-    -o-transition: all linear 0.3s;
-  } */
-  
-  .navAfter:hover {
-    color: #000000;
-  }
-  
-  
-  @keyframes jump {
-  
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-      transform: translateY(0);
-    }
-  
-    40% {
-      transform: translateY(-20px);
-    }
-  
-    60% {
-      transform: translateY(-10px);
-    }
-  }
-  
-  .animate-jump {
-    animation: jump 1s ease;
-  }
-  
+}
+
+.animate-jump {
+  animation: jump 1s ease;
+}
