--- a/src/Shared/Navbar.css
+++ b/src/Shared/Navbar.css
@@ -1,59 +1,71 @@
 /* Navbar CSS starts here */
+.header {
+  width: 100%;
+  /* position: -webkit-sticky; */
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  padding: 13px 0 16px 0;
+  -webkit-transition: 0.3s ease-in;
+  transition: 0.3s ease-in;
+  z-index: 310;
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1335px) {
+  .wrapx {
+      padding: 0 48px;
+  }
+}
+
+
 .active {
-    font-size: 8px;
-    color: #000000 !important;
-    font-weight: 600;
-  }
-  
-  .navAfter.active::before {
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: #000000;
-    position: absolute;
-    left: 0;
-    top: 15px;
-    font-size: 8px;
-    transition: all linear 0.3s;
-  }
-  
-  .navAfter {
-    min-height: 100%;
-  }
-  
-  .navAfter::after {
-    content: "";
-    width: 0%;
-    height: 1px;
-    background-color: #000000;
-    position: absolute;
-    left: 0;
-    top: 15px;
-    font-size: 8px;
-    transition: all linear 0.3s;
-  }
-  
-  .navAfter:hover:after {
-    width: 100%;
-  }
-  
-  .active:hover:after {
-    width: 0%;
-  }
-  
-  /* .navAfter{
-    transition: all linear 0.3s;
-    -webkit-transition: all linear 0.3s;
-    -moz-transition: all linear 0.3s;
-    -ms-transition: all linear 0.3s;
-    -o-transition: all linear 0.3s;
-  } */
-  
-  .navAfter:hover {
-    color: #000000;
-  }
-  
-  
+  font-size: 8px;
+  color: #000000 !important;
+  font-weight: 600;
+}
+
+.navAfter.active::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #000000;
+  position: absolute;
+  left: 0;
+  top: 15px;
+  transition: all linear 0.3s;
+}
+
+.navAfter {
+  letter-spacing: 0;
+  font-style: normal !important;
+}
+
+.navAfter::after {
+  content: "";
+  width: 0%;
+  height: 1px;
+  background-color: #000000;
+  position: absolute;
+  left: 0;
+  top: 15px;
+  transition: all linear 0.3s;
+}
+
+.navAfter:hover:after {
+  width: 100%;
+}
+
+.active:hover:after {
+  width: 0%;
+}
+
+.navAfter:hover {
+  color: #000000;
+}
+
+
 @keyframes jump {
 
   0%,
