--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nanum+Gothic&display=swap');
+
+body {
+    font-family: "HurmeHEMA",
+        "Century Gothic",
+        "Nanum Gothic",
+        sans-serif CenturyGothic,
+        AppleGothic,
+        sans-serif;
+    font-weight: 200;
+    font-size: 15px;
+    color: #323232;
+}
 
 .react-multiple-carousel__arrow {
     position: absolute;
